--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
-    <?php include 'html/paginaInicial.php'; ?>
+    <form action="html/paginaInicial.php" method="post">
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" name="nome" required>
+        <button type="submit">Enviar</button>
+    </form>
 </body>
+
+
 
 </html>
